<resources>
    <string name="app_name">Coursework</string>
    <string name="about">About Me</string>
    <string name="new_game">New Game</string>
    <string name="plagiarism_text">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
    <string name="name">Name = Ganesh Raahul Rohith</string>
    <string name="about_me_heading">ABOUT ME</string>
    <string name="student_id">Student ID = 2019218</string>
    <string name="greater">Greater</string>
    <string name="equal_button">==</string>
    <string name="less">Less</string>
    <string name="name_raahul_rohith">Name = Raahul Rohith</string>
    <string name="student_id_2019218_w1809915">Student ID = 2019218 | w1809915</string>
    <string name="i_confirm_that_i_understand_what_plagiarism_is_and_have_read_and_understood_the_section_on_assessment_offences_in_the_essential_information_for_students_the_work_that_i_have_submitted_is_entirely_my_own_any_work_from_other_authors_is_duly_referenced_and_acknowledged">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
</resources>